--- a/Travel/travelmobile/package.json
+++ b/Travel/travelmobile/package.json
@@ -23,6 +23,7 @@
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-firebase/app": "^21.14.0",
     "@react-native-firebase/database": "^21.14.0",
+    "@react-native-picker/picker": "2.11.0",
     "@react-navigation/bottom-tabs": "^7.3.4",
     "@react-navigation/native": "^7.1.5",
     "@react-navigation/native-stack": "^7.3.4",
@@ -40,6 +41,7 @@
     "node-fetch": "^3.3.2",
     "react": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-collapsible": "^1.6.2",
     "react-native-currency-formatter": "^1.0.3",
     "react-native-firebase": "^5.6.0",
@@ -50,11 +52,13 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-mail": "^6.1.1",
     "react-native-maps": "^1.23.7",
+    "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-paper": "^5.12.3",
     "react-native-paystack-webview": "^4.0.6",
     "react-native-permissions": "^4.1.5",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "5.4.0",
+    "react-native-svg": "^15.12.0",
     "react-native-webview": "^13.12.5"
   },
   "devDependencies": {
