--- a/Travel/travelmobile/package.json
+++ b/Travel/travelmobile/package.json
@@ -33,8 +33,10 @@
     "expo-file-system": "~18.1.9",
     "expo-image-picker": "~16.1.4",
     "expo-location": "~18.1.4",
+    "expo-notifications": "^0.31.3",
     "expo-permissions": "^14.4.0",
     "expo-status-bar": "~2.2.3",
+    "expo-task-manager": "^13.1.5",
     "html5-geolocation": "^2.0.0",
     "moment": "^2.30.1",
     "natural": "^8.0.1",
